--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@twurple/api": "^7.3.0",
     "@twurple/auth": "^7.3.0",
+    "googleapis": "^153.0.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
