feat(env): TTL to env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
+# General
+CACHE_TTL_IN_MINUTES=
+
 # https://dev.twitch.tv/console
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
 
 # https://console.cloud.google.com/apis/credentials
 YOUTUBE_API_KEY=
+
+# https://kick.com/settings/developer
+KICK_CLIENT_ID=
+KICK_CLIENT_SECRET=
